# llama-titan

./: .gitignore  README.md  pyproject.toml
src/llama_titan/: model.py
src/llama_titan/memory/: core.py  long_term.py  persistent.py
src/llama_titan/utils/: memory_management.py  visualization.py
tests/: test_gradient_checkpointing.py  test_memory_management.py  test_mixed_precision.py  test_model.py  test_visualization.py
tests/test_memory/: test_core.py  test_long_term.py  test_memory_prefetching.py  test_persistent.py
