[tool.poetry]
name = "llama-titan"
version = "0.1.0"
description = "Implementation of the Titans architecture based on LLaMA"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.26.0"
torch = ">=2.0.0"
fairscale = ">=0.4.0"
sentencepiece = ">=0.1.99"
transformers = "^4.37.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = "^6.0.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
